--- a/package.json
+++ b/package.json
@@ -11,23 +11,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "fancy-log": "^1.3.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-watch": "^4.3.9"
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-watch": "^5.0.1"
   },
   "dependencies": {
-    "lodash": "^4.15.0",
-    "mjml": "^4.0.0"
+    "lodash": "^4.17.11",
+    "mjml": "^4.2.0"
   }
 }
