Sort-of working hbs components.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,7 @@
 {
-  "extends": [
-    "eslint-config-airbnb-base",
-    "eslint-config-airbnb-base/rules/strict"
-  ],
-  "parser": "babel-eslint",
-  "rules": {
-
-    "padded-blocks": 0,
-    "space-before-function-paren": 0,
-    "semi": 0,
-
+  "env": {
+    "node": true,
   },
+  "extends": ["eslint:recommended"],
+  "parser": "babel-eslint",
 }
