--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.0.1",
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
